Deploy Bug fixes - select, tooltip, button z-index

--- a/src/styles/components/_popups.scss
+++ b/src/styles/components/_popups.scss
@@ -123,7 +123,7 @@
   }
 
   &__select {
-    // width: 100% !important;
+    width: 100%;
     text-align: left;
 
     .select {
